--- a/Pipfile
+++ b/Pipfile
@@ -12,8 +12,9 @@ arviz = "*"
 networkx = "*"
 graphviz = "*"
 statsmodels = "*"
+pywhy-graphs = {file = "https://api.github.com/repos/py-why/pywhy-graphs/zipball/main"}
 
 [dev-packages]
 
 [requires]
-python_version = "3.11.1"
+python_version = "3.10.8"
